// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FAQAccordion - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="flex w-full flex-col gap-4 custom-faq-class"
  data-orientation="vertical"
>
  <div
    class="w-full overflow-hidden rounded-lg border border-border"
    data-orientation="vertical"
    data-state="closed"
  >
    <h3
      data-orientation="vertical"
      data-state="closed"
    >
      <button
        aria-controls="radix-_r_0_"
        aria-expanded="false"
        class="group flex w-full cursor-pointer items-center justify-between px-6 py-4 transition-colors hover:bg-white/5"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-state="closed"
        id="radix-_r_0_"
        type="button"
      >
        <span
          class="text-left text-base font-semibold"
        >
          What is Pubky?
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right ml-4 flex-shrink-0 transition-transform group-data-[state=open]:rotate-90"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-_r_0_"
      class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
      data-orientation="vertical"
      data-state="closed"
      hidden=""
      id="radix-_r_0_"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
    />
  </div>
  <div
    class="w-full overflow-hidden rounded-lg border border-border"
    data-orientation="vertical"
    data-state="closed"
  >
    <h3
      data-orientation="vertical"
      data-state="closed"
    >
      <button
        aria-controls="radix-_r_0_"
        aria-expanded="false"
        class="group flex w-full cursor-pointer items-center justify-between px-6 py-4 transition-colors hover:bg-white/5"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-state="closed"
        id="radix-_r_0_"
        type="button"
      >
        <span
          class="text-left text-base font-semibold"
        >
          How do I sign up?
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right ml-4 flex-shrink-0 transition-transform group-data-[state=open]:rotate-90"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-_r_0_"
      class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
      data-orientation="vertical"
      data-state="closed"
      hidden=""
      id="radix-_r_0_"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
    />
  </div>
</div>
`;

exports[`FAQAccordion - Snapshots > matches snapshot with default props 1`] = `
<div
  class="flex w-full flex-col gap-4"
  data-orientation="vertical"
>
  <div
    class="w-full overflow-hidden rounded-lg border border-border"
    data-orientation="vertical"
    data-state="closed"
  >
    <h3
      data-orientation="vertical"
      data-state="closed"
    >
      <button
        aria-controls="radix-_r_0_"
        aria-expanded="false"
        class="group flex w-full cursor-pointer items-center justify-between px-6 py-4 transition-colors hover:bg-white/5"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-state="closed"
        id="radix-_r_0_"
        type="button"
      >
        <span
          class="text-left text-base font-semibold"
        >
          What is Pubky?
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right ml-4 flex-shrink-0 transition-transform group-data-[state=open]:rotate-90"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-_r_0_"
      class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
      data-orientation="vertical"
      data-state="closed"
      hidden=""
      id="radix-_r_0_"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
    />
  </div>
  <div
    class="w-full overflow-hidden rounded-lg border border-border"
    data-orientation="vertical"
    data-state="closed"
  >
    <h3
      data-orientation="vertical"
      data-state="closed"
    >
      <button
        aria-controls="radix-_r_0_"
        aria-expanded="false"
        class="group flex w-full cursor-pointer items-center justify-between px-6 py-4 transition-colors hover:bg-white/5"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-state="closed"
        id="radix-_r_0_"
        type="button"
      >
        <span
          class="text-left text-base font-semibold"
        >
          How do I sign up?
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right ml-4 flex-shrink-0 transition-transform group-data-[state=open]:rotate-90"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-_r_0_"
      class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
      data-orientation="vertical"
      data-state="closed"
      hidden=""
      id="radix-_r_0_"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
    />
  </div>
</div>
`;

exports[`FAQAccordion - Snapshots > matches snapshot with empty items 1`] = `
<div
  class="flex w-full flex-col gap-4"
  data-orientation="vertical"
/>
`;

exports[`FAQAccordion - Snapshots > matches snapshot with markdown answer content 1`] = `
<div
  class="flex w-full flex-col gap-4"
  data-orientation="vertical"
>
  <div
    class="w-full overflow-hidden rounded-lg border border-border"
    data-orientation="vertical"
    data-state="closed"
  >
    <h3
      data-orientation="vertical"
      data-state="closed"
    >
      <button
        aria-controls="radix-_r_0_"
        aria-expanded="false"
        class="group flex w-full cursor-pointer items-center justify-between px-6 py-4 transition-colors hover:bg-white/5"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-state="closed"
        id="radix-_r_0_"
        type="button"
      >
        <span
          class="text-left text-base font-semibold"
        >
          Complex question
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right ml-4 flex-shrink-0 transition-transform group-data-[state=open]:rotate-90"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-_r_0_"
      class="overflow-hidden data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
      data-orientation="vertical"
      data-state="closed"
      hidden=""
      id="radix-_r_0_"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
    />
  </div>
</div>
`;
